# Listik-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  bot.py  categories.py  config.py  database.py  docker-compose.yml  handlers.py  models.py  pyproject.toml  states.py  utils.py
.github/workflows/: ci.yml  deploy.yml
tests/: conftest.py  test_categories.py  test_database.py  test_handlers.py  test_utils.py
