[project]
name = "grocery-shopping-bot"
version = "0.1.0"
description = "Telegram bot for shared grocery list"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
omit = [
    "bot.py",
    "tests/*",
    "*/__pycache__/*",
]
